--- a/index.html
+++ b/index.html
@@ -4,333 +4,7 @@
   <meta charset="UTF-8" />
   <title>Flight Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root {
-      color-scheme: light dark;
-      --bg: #f5f5f7;
-      --card-bg: #ffffff;
-      --border-subtle: rgba(0,0,0,0.07);
-      --text-main: #111111;
-      --text-secondary: #6e6e73;
-      --accent: #007aff;
-      --accent-soft: rgba(0,122,255,0.1);
-      --shadow-soft: 0 12px 30px rgba(0,0,0,0.06);
-      --radius-large: 20px;
-      --radius-medium: 12px;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg: #000000;
-        --card-bg: #1c1c1e;
-        --border-subtle: rgba(255,255,255,0.08);
-        --text-main: #f5f5f7;
-        --text-secondary: #a1a1aa;
-        --accent-soft: rgba(10,132,255,0.26);
-        --shadow-soft: 0 22px 40px rgba(0,0,0,0.9);
-      }
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont,
-        "SF Pro Text", "SF Pro Display", "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top left, #ffffff, var(--bg));
-      color: var(--text-main);
-      -webkit-font-smoothing: antialiased;
-    }
-
-    .app {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 40px 20px 56px;
-    }
-
-    .app-header {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 24px;
-    }
-
-    .app-icon {
-      width: 44px;
-      height: 44px;
-      border-radius: 16px;
-      background: linear-gradient(135deg, #0a84ff, #64d2ff);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 12px 30px rgba(10,132,255,0.35);
-      color: #fff;
-      font-weight: 600;
-      font-size: 22px;
-    }
-
-    .app-title-block {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-    }
-
-    .app-title {
-      font-size: 28px;
-      font-weight: 600;
-      letter-spacing: -0.02em;
-    }
-
-    .app-subtitle {
-      font-size: 14px;
-      color: var(--text-secondary);
-    }
-
-    .layout {
-      display: grid;
-      grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
-      gap: 20px;
-    }
-
-    @media (max-width: 800px) {
-      .layout {
-        grid-template-columns: minmax(0, 1fr);
-      }
-    }
-
-    .card {
-      background: var(--card-bg);
-      border-radius: var(--radius-large);
-      border: 1px solid var(--border-subtle);
-      box-shadow: var(--shadow-soft);
-      padding: 20px 20px 18px;
-    }
-
-    .card-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 16px;
-    }
-
-    .card-title {
-      font-size: 17px;
-      font-weight: 600;
-      letter-spacing: -0.01em;
-    }
-
-    .card-note {
-      font-size: 12px;
-      color: var(--text-secondary);
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-    }
-
-    .field-group {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 12px;
-    }
-
-    @media (max-width: 600px) {
-      .field-group {
-        grid-template-columns: minmax(0, 1fr);
-      }
-    }
-
-    .field {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    label {
-      font-size: 12px;
-      letter-spacing: 0.02em;
-      text-transform: uppercase;
-      color: var(--text-secondary);
-      font-weight: 600;
-    }
-
-    input,
-    select {
-      font-size: 14px;
-      padding: 7px 10px;
-      border-radius: 10px;
-      border: 1px solid rgba(120,120,128,0.24);
-      background: rgba(249,249,249,0.9);
-      color: var(--text-main);
-      outline: none;
-      transition: border-color 0.15s ease, box-shadow 0.15s ease,
-        background-color 0.15s ease, transform 0.08s ease;
-      -webkit-appearance: none;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      input,
-      select {
-        background: rgba(44,44,46,0.9);
-        border-color: rgba(99,99,102,0.8);
-      }
-    }
-
-    input:focus,
-    select:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 3px var(--accent-soft);
-    }
-
-    input::placeholder {
-      color: rgba(128,128,128,0.7);
-    }
-
-    select[multiple] {
-      min-height: 90px;
-      padding-top: 8px;
-      padding-bottom: 8px;
-    }
-
-    small {
-      font-size: 11px;
-      color: var(--text-secondary);
-    }
-
-    .button-row {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-top: 8px;
-      flex-wrap: wrap;
-    }
-
-    .btn {
-      border-radius: 999px;
-      border: 1px solid rgba(0,0,0,0.08);
-      padding: 7px 16px;
-      font-size: 14px;
-      font-weight: 500;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      background: #f2f2f7;
-      color: var(--text-main);
-      transition: transform 0.08s ease, box-shadow 0.12s ease,
-        background-color 0.12s ease, border-color 0.12s ease;
-      -webkit-appearance: none;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .btn {
-        background: #2c2c2e;
-        border-color: rgba(255,255,255,0.1);
-      }
-    }
-
-    .btn-primary {
-      background: linear-gradient(135deg, #0a84ff, #007aff);
-      color: #ffffff;
-      border-color: transparent;
-      box-shadow: 0 10px 20px rgba(0,122,255,0.4);
-    }
-
-    .btn-ghost {
-      background: transparent;
-      border-color: rgba(0,0,0,0.12);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .btn-ghost {
-        border-color: rgba(255,255,255,0.22);
-      }
-    }
-
-    .btn:hover {
-      transform: translateY(-0.5px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.12);
-    }
-
-    .btn:active {
-      transform: translateY(0);
-      box-shadow: 0 0 0 rgba(0,0,0,0);
-    }
-
-    .btn-icon {
-      font-size: 16px;
-      line-height: 1;
-    }
-
-    .json-block {
-      background: rgba(244,244,248,0.9);
-      border-radius: var(--radius-medium);
-      padding: 10px 12px;
-      border: 1px solid rgba(0,0,0,0.06);
-      font-family: "SF Mono", ui-monospace, Menlo, Monaco, Consolas,
-        "Liberation Mono", "Courier New", monospace;
-      font-size: 12px;
-      overflow: auto;
-      max-height: 260px;
-      white-space: pre;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .json-block {
-        background: #111111;
-        border-color: rgba(255,255,255,0.09);
-      }
-    }
-
-    .json-label-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 6px;
-    }
-
-    .json-title {
-      font-size: 13px;
-      font-weight: 600;
-      letter-spacing: 0.02em;
-      text-transform: uppercase;
-      color: var(--text-secondary);
-    }
-
-    .badge {
-      font-size: 11px;
-      padding: 2px 8px;
-      border-radius: 999px;
-      background: var(--accent-soft);
-      color: var(--accent);
-      border: 1px solid rgba(0,122,255,0.35);
-    }
-
-    .secondary-card {
-      margin-top: 16px;
-      padding-top: 14px;
-      border-top: 1px solid rgba(0,0,0,0.06);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      .secondary-card {
-        border-top-color: rgba(255,255,255,0.12);
-      }
-    }
-
-    .api-status-row {
-      margin-bottom: 8px;
-    }
-    .api-status-text {
-      font-size: 11px;
-      color: var(--text-secondary);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="app">
@@ -363,6 +37,7 @@
                 autocomplete="off"
                 required
               />
+              <div id="flight-error" class="field-error" aria-live="polite"></div>
             </div>
 
             <div class="field">
@@ -372,6 +47,7 @@
                 type="date"
                 required
               />
+              <div id="flight-date-error" class="field-error" aria-live="polite"></div>
             </div>
           </div>
 
@@ -394,6 +70,8 @@
             </div>
           </div>
 
+          <div id="pax-error" class="field-error" aria-live="polite"></div>
+
           <div class="field-group">
             <div class="field">
               <label for="pnr">PNR Code</label>
@@ -409,7 +87,7 @@
           </div>
 
           <div class="button-row">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" disabled>
               <span class="btn-icon">➕</span>
               <span>Get Route & Save</span>
             </button>
@@ -439,7 +117,7 @@
           </span>
         </div>
 
-        <div class="button-row" style="margin-bottom: 6px;">
+        <div class="button-row button-row-top">
           <button id="import-json" class="btn btn-ghost">
             <span class="btn-icon">⬆︎</span>
             <span>Import JSON</span>
@@ -462,7 +140,7 @@
           style="display:none;"
         />
 
-        <div class="json-label-row" style="margin-top: 10px;">
+        <div class="json-label-row">
           <div class="json-title">Saved Flights</div>
         </div>
         <pre id="saved-json" class="json-block">[]</pre>
@@ -470,7 +148,6 @@
     </main>
   </div>
 
-  <!-- Logic -->
   <script src="script.js"></script>
 </body>
 </html>
